<resources>
    <string name="app_name">ASE-DAM-Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="all_countries">All Countries</string>
    <string name="view_map">View Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="countries_json">countries.json</string>
    <string name="country_name">Country Name</string>
    <string name="continent_name">Continent Name</string>
    <string name="capital_name">Capital Name</string>
    <string name="population">Population</string>
    <string name="country_flag">Country Flag</string>
    <string name="dash">-</string>
    <string name="population_count">Population: %1$o</string>
    <string name="view_details">View details</string>
    <string name="country_info">Country Info</string>
    <string name="country_coat_of_arms">Country Coat of Arms</string>
    <string name="located_on_the_continent">Located on the continent of %1$s</string>
    <string name="manea_lucian_george">Manea Lucian George</string>
    <string name="ie_an_3_1110_id">IE, An 3, 1110 ID</string>
    <string name="capital_city">Capital City: %1$s</string>
    <string name="add_new_country">Add new country</string>
    <string name="country_flag_url">Country Flag URL</string>
    <string name="continent">Continent</string>
    <string name="country_coat_of_arms_url">Country Coat of Arms URL</string>
    <string name="cca3">CCA3</string>
    <string name="new_country">New Country</string>
    <string name="home">Home</string>
    <string name="save_country">Save country</string>
    <string name="invalid_form">Form is invalid. Make sure to fill all fields</string>
    <string name="country_of_the_day">Country of the day</string>
    <string-array name="continents">
        <item>Africa</item>
        <item>North America</item>
        <item>South America</item>
        <item>Antarctica</item>
        <item>Europe</item>
        <item>Asia</item>
        <item>Australia / Oceania</item>
    </string-array>
    <string name="chart_legend_template">%1$s - %2$d</string>
    <string name="view_continents_data">View continents data</string>
</resources>