<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="24dp"
    android:padding="16dp">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/country_card_flag"
        android:src="@drawable/ic_baseline_flag_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/country_card_population"
        android:contentDescription="@string/country_flag"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/country_card_name"
        app:layout_constraintStart_toEndOf="@+id/country_card_flag"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/country_card_capital"
        android:text="@string/country_name"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:textSize="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/country_card_continent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/country_card_capital"
        android:text="@string/continent_name"
        android:layout_marginStart="8dp"
        android:textSize="16dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/country_card_capital"
        app:layout_constraintTop_toBottomOf="@+id/country_card_name"
        app:layout_constraintStart_toEndOf="@+id/country_card_flag"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/capital_name"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/country_card_population"
        app:layout_constraintTop_toBottomOf="@id/country_card_capital"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/population"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>